--- a/index.ejs
+++ b/index.ejs
@@ -11,13 +11,42 @@
 
     <h2>投稿する</h2>
     <form method="post" action="/post">
-      作者<input name="author"/>
-      アプリ名<input name="title"/>
-      説明<input name="description"/>
+      アプリ名<input name="title" value="やば道チェッカー"/>
+      説明<textarea name="description">目的
+地域（国高地区）の人に対して危ない場所はどこか分かるように視覚化するアプリ
+
+機能
+・危険度ランキング
+・検索した経路の危険な場所
+・危険な場所をとタップすると、人目線、車目線を体感できる
+・危ないと体験した場所に投稿可能
+・危険な場所の改善案の提案
+・いいね機能</textarea>
+      作者<input name="author" value="ninja03"/>
       <input type="submit" value="投稿"/>
     </form>
 
     <h2>作品一覧</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>タイトル</th>
+          <th>説明</th>
+          <th>作者</th>
+          <th>ChatGPTくんのコメント</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% for (const app of apps) { %>
+          <tr>
+            <td><%= app.title %></td>
+            <td><%= app.description %></td>
+            <td><%= app.author %></td>
+            <td><%= app.comment %></td>
+          </tr>
+        <% } %>
+      </tbody>
+    </table>
 
   </body>
 </html>
