--- a/header.ejs
+++ b/header.ejs
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <meta charSet="utf-8"/>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Denoアプリ自動コンテスト</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css" />
+    <title>アプリコンテスト練習場</title>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <h1>Denoアプリ自動コンテスト</h1>
+  <body class="px-8 bg-gray-200">
+    <header class="p-4 text-center text-4xl">
+      アプリコンテスト練習場
+    </header>
