--- a/index.ejs
+++ b/index.ejs
@@ -1,40 +1,19 @@
 <%- await include("header.ejs") %>
-<h2>作品一覧</h2>
-<table>
-  <thead>
-    <tr>
-      <th>タイトル</th>
-      <th>説明</th>
-      <th>作者</th>
-      <th>ChatGPTくんのコメント</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% for (const app of apps) { %>
-      <tr>
-        <td><%= app.title %></td>
-        <td><%= app.description %></td>
-        <td><%= app.author %></td>
-        <td><%= app.comment %></td>
-      </tr>
-    <% } %>
-  </tbody>
-</table>
 
-<h2>投稿する</h2>
-<form method="post" action="/post">
-  アプリ名<input name="title" value="やば道チェッカー"/>
-  説明<textarea rows="15" name="description">目的
-地域（国高地区）の人に対して危ない場所はどこか分かるように視覚化するアプリ
+<a href="/post" class="block text-blue-700 text-center text-2xl">投稿する</a>
+<% for (const app of apps) { %>
+  <div class="mt-4 border border-black rounded shadow-md bg-white">
+    <div class="text-xl bg-blue-100 p-2">
+      <%= app.title %>
+      by <%= app.author %>
+    </div>
+    <div class="text-xl p-2 border-b">作品概要</div>
+    <div class="p-2 whitespace-pre-wrap"><%= app.description %></div>
+    <div class="text-xl p-2 border-b">審査委員のコメント</div>
+    <div>
+      <div class="p-2 whitespace-pre-wrap"><%= app.comment %></div>
+    </div>
+  </div>
+<% } %>
 
-機能
-・危険度ランキング
-・検索した経路の危険な場所
-・危険な場所をとタップすると、人目線、車目線を体感できる
-・危ないと体験した場所に投稿可能
-・危険な場所の改善案の提案
-・いいね機能</textarea>
-  作者<input name="author" value="ninja03"/>
-  <input type="submit" value="投稿"/>
-</form>
 <%- await include("footer.ejs") %>
