--- a/post.ejs
+++ b/post.ejs
@@ -1,6 +1,6 @@
 <%- await include("header.ejs") %>
 
-<form method="post" action="/post" class="shadow-md text-center bg-white">
+<form method="post" action="/post" class="shadow-md text-center bg-white max-w-3xl mx-auto">
 
   <div class="p-2">
     <div class="text-xl mb-2">アプリ名</div>
