--- a/index.ejs
+++ b/index.ejs
@@ -2,7 +2,7 @@
 
 <a href="/post" class="block text-blue-700 text-center text-2xl">投稿する</a>
 <% for (const app of apps) { %>
-  <div class="mt-4 border border-black rounded shadow-md bg-white">
+  <div class="mt-4 border border-black rounded shadow-md bg-white max-w-3xl mx-auto">
     <div class="text-xl bg-blue-100 p-2">
       <%= app.title %>
       by <%= app.author %>
